# translator

./: .env.dist  .gitignore  README.md  pyproject.toml
.githooks/: commit-msg  pre-push
scripts/: download-models.sh  lint.sh  run.sh  setup.sh  test.sh  typecheck.sh
src/translator/: __init__.py  app.py  audio.py  audio_capture.py  audio_types.py  config.py  languages.py  model_cache.py  pcm.py  speech_segments.py  transcript.py  transcription.py  translation.py  voice_activity.py
src/translator/ui/: __init__.py  dark_scrollbar.py  language_selector.py  listen_control.py  mode_toggle.py  transcript_view.py
tests/: test_app.py  test_audio.py  test_config.py  test_dark_scrollbar.py  test_language_selector.py  test_languages.py  test_listen_control.py  test_mode_toggle.py  test_model_cache.py  test_transcript.py  test_transcript_view.py  test_transcription.py  test_translation.py
